// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<NewUserRoleForm /> <PersonalDetails /> renders correctly 1`] = `
<fieldset
  className="personal-details"
>
  <div>
    <div
      style={
        Object {
          "paddingTop": "14px",
        }
      }
    >
      <Input
        autoComplete="off"
        choices={
          Array [
            "travela@travela.com",
          ]
        }
        className="email_dropdown"
        disabled={false}
        label="Andela Email Address"
        labelNote=""
        name="email"
        onChange={null}
        size=""
        type="filter-dropdown-select"
      />
    </div>
    <div>
      <div
        className="size_in"
      >
        <div
          className="add_dept"
        >
          <Input
            autoComplete="off"
            choices={
              Array [
                "Kenya",
                "Nigeria",
              ]
            }
            className="department_dropdown"
            label="Country"
            labelNote=""
            name="item"
            onChange={null}
            size=""
            type="filter-dropdown-select"
          />
        </div>
        <button
          className="disable_button"
          disabled={true}
          onClick={[Function]}
          type="button"
        >
          Add
        </button>
      </div>
    </div>
    <div
      className=""
    >
      <table
        className="mdl-js-data-table table__requests"
        style={
          Object {
            "backgroundColor": "white",
          }
        }
      />
    </div>
  </div>
</fieldset>
`;

exports[`<NewUserRoleForm /> renders correctly 1`] = `
<form
  className="new-request"
  key=".0"
  onSubmit={[Function]}
>
  <fieldset
    className="personal-details"
  >
    <div>
      <div
        style={
          Object {
            "paddingTop": "14px",
          }
        }
      >
        <div
          className="form-input email_dropdown "
        >
          <label
            htmlFor="email"
          >
            Andela Email Address
            <span
              style={
                Object {
                  "color": "red",
                }
              }
            >
               * 
            </span>
          </label>
          <div
            style={
              Object {
                "position": "relative",
              }
            }
          >
            <div
              className="value"
              style={
                Object {
                  "width": "",
                }
              }
            >
              <input
                autoComplete="off"
                choices={
                  Array [
                    "travela@travela.com",
                  ]
                }
                className="occupationInput"
                disabled={false}
                label="Andela Email Address"
                name="role"
                onChange={[Function]}
                size=""
                type="text"
                value="tomato@andela.com"
              />
              <div
                className="hide"
              >
                <ul
                  className="select-menu select-menu--inactive"
                  onScroll={[Function]}
                />
              </div>
            </div>
          </div>
          <span
            className="error"
          />
        </div>
      </div>
      <div>
        <div
          className="size_in"
        >
          <div
            className="add_dept"
          >
            <div
              className="form-input department_dropdown "
            >
              <label
                htmlFor="item"
              >
                Country
                <span
                  style={
                    Object {
                      "color": "red",
                    }
                  }
                >
                   * 
                </span>
              </label>
              <div
                style={
                  Object {
                    "position": "relative",
                  }
                }
              >
                <div
                  className="value"
                  style={
                    Object {
                      "width": "",
                    }
                  }
                >
                  <input
                    autoComplete="off"
                    choices={
                      Array [
                        "Kigali, Rwanda",
                      ]
                    }
                    className="occupationInput"
                    label="Country"
                    name="role"
                    onChange={[Function]}
                    size=""
                    type="text"
                    value=""
                  />
                </div>
              </div>
              <span
                className="error"
              />
            </div>
          </div>
          <button
            className="disable_button"
            disabled={true}
            onClick={[Function]}
            type="button"
          >
            Add
          </button>
        </div>
      </div>
      <div
        className=""
      >
        <table
          className="mdl-js-data-table table__requests"
          style={
            Object {
              "backgroundColor": "white",
            }
          }
        />
      </div>
    </div>
  </fieldset>
  <fieldset
    className={null}
  >
    <div
      className="submit-area"
    >
      <button
        className="bg-btn bg-btn--inactive"
        id="cancel"
        onClick={[Function]}
        type="button"
      >
        Cancel
      </button>
      <button
        className="bg-btn bg-btn--active"
        disabled={true}
        id="submit"
        onClick={[Function]}
        type="submit"
      >
        <undefined />
      </button>
    </div>
  </fieldset>
</form>
`;
